# tari-l2-messenger

./: .gitattributes  .gitignore  DEMO.md  PLAN.md  PROGRESS.md  README.md  launch-dev.bat  launch.bat
.github/workflows/: build.yml
messaging_app/: Cargo.toml
messaging_app/src/: main.rs  want_list.rs
messaging_app/static/: index.html  instructions.html
messaging_template/: Cargo.toml
messaging_template/src/: lib.rs
messaging_template/tests/: messaging_test.rs
